--- a/css/style.css
+++ b/css/style.css
@@ -2707,6 +2707,30 @@ tbody.collapse.in {
   -webkit-transition-timing-function: ease;
   transition-timing-function: ease;
 }
+@font-face {
+  font-family: "glyphs";
+  src: url("../fonts/glyphs/glyphs.eot?c6cf8e9c69470e82c3538eb08048d8b0");
+  src: url("../fonts/glyphs/glyphs.eot?#iefix") format("embedded-opentype"), url("../fonts/glyphs/glyphs.woff?c6cf8e9c69470e82c3538eb08048d8b0") format("woff"), url("../fonts/glyphs/glyphs.ttf?c6cf8e9c69470e82c3538eb08048d8b0") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+.glyph {
+  font-family: "glyphs";
+  display: inline-block;
+  vertical-align: middle;
+  line-height: 1;
+  font-weight: normal;
+  font-style: normal;
+  speak: none;
+  text-decoration: inherit;
+  text-transform: none;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.glyph-twitter:before {
+  content: "\f101";
+}
 .caret {
   display: inline-block;
   width: 0;
