--- a/less/style.less
+++ b/less/style.less
@@ -18,7 +18,7 @@
 
 // Components
 @import "components/component-animations.less";
-// @import "components/glyphicons.less";
+@import "components/glyphs.less";
 @import "components/dropdowns.less";
 @import "components/button-groups.less";
 @import "components/input-groups.less";
