--- a/less/style.less
+++ b/less/style.less
@@ -19,6 +19,8 @@
 //Modules
 @import "modules/views.less";
 @import "modules/field.less";
+@import "modules/panels.less";
+
 
 // Components
 @import "components/component-animations.less";
