changed grunticon prefix

--- a/images/grunticon/icons.fallback.css
+++ b/images/grunticon/icons.fallback.css
@@ -1,2 +1,2 @@
-.icon-coffee { background-image: url('png/coffee.png'); background-repeat: no-repeat; }
+.svg-coffee { background-image: url('png/coffee.png'); background-repeat: no-repeat; }
 
